--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Tablas.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Tablas.cshtml
@@ -5,7 +5,7 @@
     <div class="col-md-3 text-center"></div>
     <div class="col-md-3 text-center"></div>
 </div>
-<h1 class="page-header">@ViewBag.Title</h1>
+@*<h1 class="page-header">@ViewBag.Title</h1>*@
 
 
 <ul class="list-group">
