--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Assets/application/css/main.css
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Assets/application/css/main.css
@@ -233,7 +233,7 @@ body {
   -moz-transition: -moz-transform 0.3s ease-in-out, margin 0.3s ease-in-out;
   -o-transition: -o-transform 0.3s ease-in-out, margin 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
-  margin-left: 250px;
+  /*margin-left: 250px;*/
   z-index: 820;
 }
 
