--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Posgrado/CuotaPago.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Posgrado/CuotaPago.cshtml
@@ -1,7 +1,8 @@
 ﻿
+@{
+    string action = @ViewBag.Action;
+}
 
-@model IEnumerable<WebMigradorCtasPorCobrar.Models.Entities.CuotaPagoTP>
-@using GridMvc.Html
 
 <div class="container-fluid">
     <div class="col-12">
@@ -19,21 +20,24 @@
     <br />
 
     <div class="col-12">
-
-        <br />
-        <div class="table-responsive" style="min-height:300px">
-            @Html.Grid(Model).Columns(columns =>
-            {
-                columns.Add(c => c.Cuota_pago).Titled("Codigo").Filterable(true);
-                columns.Add(c => c.Descripcio).Titled("Descripción").Filterable(true);
-                columns.Add(c => c.N_cta_cte).Titled("Nro. Cuenta").Filterable(true);
-                columns.Add(c => c.Eliminado).Titled("Eliminado").Filterable(true);
-                columns.Add(c => c.Codigo_bnc).Titled("Codigo BNC").Filterable(true);
-                columns.Add(c => c.Fch_venc).Titled("Fec. Venc").Filterable(true);
-                columns.Add(c => c.Prioridad).Titled("Prioridad").Filterable(true);
-                columns.Add(c => c.C_mora).Titled("Mora").Filterable(true);
-                }
-            ).WithPaging(30).Sortable(true).WithGridItemsCount("Registros encontrados").EmptyText("No se encontraron registros")
+        <ul class="nav nav-pills nav-fill mb-3">
+            <li class="nav-item" role="presentation">
+                <a class="nav-link @ViewBag.Enabled_1 @ViewBag.Active_1" id="pills-step1-tab" href="@Url.Action("CuotaPago","Posgrado", new { step = 1 })">1. Data Original</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link @ViewBag.Enabled_2 @ViewBag.Active_2" id="pills-step2-tab" href="@Url.Action("CuotaPago","Posgrado", new { step = 2 })">2. Transformación y validaciones </a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link @ViewBag.Enabled_3 @ViewBag.Active_3" id="pills-step3-tab" href="@Url.Action("CuotaPago","Posgrado", new { step = 3 })">3. Data a migrar</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link @ViewBag.Enabled_4 @ViewBag.Active_4" id="pills-step4-tab" href="@Url.Action("CuotaPago","Posgrado", new { step = 4 })">4. Resultado migración</a>
+            </li>
+        </ul>
+        <div class="tab-content p-3" id="pills-tabContent">
+            <div class="tab-pane fade show active" id="@ViewBag.Id" role="tabpanel" aria-labelledby="pills-@ViewBag.Step-tab">
+                @Html.Action(action, "Posgrado", new { id = "" })
+            </div>
         </div>
 
     </div>
